# TD_ESGI5_MLOPS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.frontend  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/: predictions_dag.py  retrain_dag.py
frontend/: app.py
mlproject/: api.py  config.py  data.py  evaluate.py  evaluation.py  tracking.py  train.py  train_models.py  train_optuna.py
scripts/: predict_client.py
tests/: conftest.py  test_api.py
